rotas e estruturação de pastas

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fcc-registration-sytem",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
