--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
+  "esModuleInterop": true,
+  "baseUrl": ".",
+  "paths": {
+    "vue-router": ["node_modules/vue-router/dist/vue-router.esm.js"]
+  },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
