--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "esModuleInterop": true,
-  "baseUrl": ".",
+  "baseUrl": "./src",
   "paths": {
     "vue-router": ["node_modules/vue-router/dist/vue-router.esm.js"]
   },
