--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc-registration-sytem",
+  "name": "fcc-registration-system",
   "private": true,
   "version": "0.0.0",
   "engines": {
