--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.10",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.76.0",
     "typescript": "^5.2.2",
