--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.12.7",
     "axios": "^1.6.8",
+    "vee-validate": "^4.12.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
