--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:types": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
-    "@vee-validate/zod": "^4.12.7",
     "axios": "^1.6.8",
-    "vee-validate": "^4.12.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuex": "^4.1.0",
+    "vuex": "^4.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.76.0",
     "typescript": "^5.2.2",
